--- a/references.bib
+++ b/references.bib
@@ -9,6 +9,28 @@
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
+@article{ledermann2017analyzing,
+  title={Analyzing dyadic data with multilevel modeling versus structural equation modeling: A tale of two methods.},
+  author={Ledermann, Thomas and Kenny, David A},
+  journal={Journal of Family Psychology},
+  volume={31},
+  number={4},
+  pages={442},
+  year={2017},
+  publisher={American Psychological Association}
+}
+
+@article{garcia2015moderation,
+  title={Moderation in the actor--partner interdependence model},
+  author={Garcia, Randi L and Kenny, David A and Ledermann, Thomas},
+  journal={Personal Relationships},
+  volume={22},
+  number={1},
+  pages={8--29},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
 @article{fredricksonetal1998,
 author = {L. Fredrickson, Barbara and Roberts, Tomi-Ann and M. Noll, Stephanie and Quinn, Diane and Twenge, Jean},
 year = {1998},
